# oneliner

./: .gitignore  .pre-commit-config.yaml  README.md  demo-interaction.html  start-dev.sh
.cursor/rules/: REVIEW.md  book-data-generation-rules.mdc  engineering-rules.mdc  interaction-design-rules.mdc  product-design-rules.mdc  ui-design-rules.mdc
.github/workflows/: deploy.yml  miniprogram-deploy.yml  run-db-migration.yml
agent/: SOUL.md
agent/skills/garden-bloom/: SKILL.md
agent/skills/garden-reply/: SKILL.md
agent/skills/garden-sprout/: SKILL.md
backend/: .env.dev  .env.example  .env.release  .env.stage  Dockerfile  pyproject.toml  seed_runner.py  start-dev
backend/app/: config.py  main.py
backend/app/clients/: wechat.py
backend/app/entities/: agent_reply.py  base.py  book.py  bookmark.py  event.py  favorite.py  sentence.py  sprout.py  user.py
backend/app/routes/: auth.py  bookmarks.py  books.py  events.py  favorites.py  garden.py  sentences.py
backend/app/services/: agent.py  auth.py  book.py  bookmark.py  favorite.py  garden.py  seed.py  seed_data_part1.py  seed_data_part2.py  seed_data_part3.py  sentence.py
backend/app/types/: schemas.py
backend/app/utils/: deps.py  jwt.py
backend/data/: books.json
backend/migrations/models/: 0_20260221230243_init.py  0_20260311212805_init.py  0_init.py  1_20260303111327_add_sprout_event_tables.py
demo/: demo-card-back.html  demo-playful-dark.html  demo.html  import React, { useEffect, useMemo, useR.js  index.html
doc/: PRD.md
miniprogram/: .gitignore  package-lock.json  package.json  project.config.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
miniprogram/src/: app.json  app.ts
miniprogram/src/config/: env.develop.ts  env.trial.ts
miniprogram/src/custom-tab-bar/: index.ts  index.wxml
miniprogram/src/pages/index/: index.ts  index.wxml
miniprogram/src/pages/login/: login.json  login.ts  login.wxml
miniprogram/src/pages/mine/: mine.ts  mine.wxml
miniprogram/src/pages/profile/: profile.json  profile.ts  profile.wxml
miniprogram/src/services/: auth.ts  bookmarks.ts  events.ts  garden.ts  sentences.ts
miniprogram/src/types/: index.ts
miniprogram/src/utils/: constants.ts  garden.ts  request.ts
