[project]
name = "oneliner-backend"
version = "0.1.0"
description = "OneLiner - 每天读几句话"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "tortoise-orm[asyncpg]",
    "aerich",
    "pydantic-settings",
    "pyjwt",
    "aiohttp",
    "uvicorn",
]

[tool.aerich]
tortoise_orm = "app.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "."

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
