[project]
name = "oneliner-backend"
version = "0.1.0"
description = "OneLiner - 每天读几句话"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "tortoise-orm[asyncpg]",
    "aerich>=0.9.2",
    "pydantic-settings",
    "pyjwt",
    "aiohttp",
    "uvicorn",
    "openai>=2.24.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ruff>=0.13.0",
    "mypy>=1.15.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
]

[tool.aerich]
tortoise_orm = "app.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "."

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
preview = true
fix = true

exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".mypy_cache",
    ".nox", ".pants.d", ".ruff_cache", ".svn", ".tox", ".venv",
    "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "venv", "migrations",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY", "D", "TD", "FIX", "S", "A003", "G004", "BLE001",
    "TRY002", "TRY300", "TRY301", "TRY400", "EM101", "EM102",
    "B008", "C901", "SLF001", "ANN003", "ANN401", "ANN201",
    "ANN202", "ARG002", "COM812", "ISC001", "Q000", "Q001",
    "Q002", "Q003", "E501", "W505", "PLR0912", "PLR0913",
    "PLR0914", "PLR0915", "PLR0917", "PLR1702", "PLR2004",
    "PLR6301", "FBT001", "FBT002", "T201", "T203", "DOC201",
    "DOC402", "DOC501", "TRY003", "RUF002", "PLW0603", "FURB118",
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["ARG001", "RUF029"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = true
force-sort-within-sections = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_subclassing_any = true
implicit_reexport = false
strict_optional = true
pretty = true
error_summary = true

[[tool.mypy.overrides]]
module = [
    "tortoise.*", "aerich.*", "fastapi.*", "uvicorn.*",
    "pydantic.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.*"
disable_error_code = ["misc"]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101"]
